# even-browser

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  vcpkg-configuration.json  vcpkg.json
src/: main.cpp
src/dom/: attr.h  document.h  element.h  node.cpp  node.h  text.h
src/html/: parser.h  state.h  token.h  tokenizer.cpp  tokenizer.h
src/util/: char_util.h
tests/: CMakeLists.txt
tests/html/: tokenizer_tests.cpp
